docs: update raspberryPi

--- a/RaspberryPi/7.基于树莓派部署code-server.md
+++ b/RaspberryPi/7.基于树莓派部署code-server.md
@@ -6,8 +6,8 @@ title: 基于树莓派部署 code-server
 [code-server](https://github.com/cdr/code-server) 是 vscode 的服务端程序，通过部署 code-server 在服务器，可以实现 web 端访问 vscode。进而可以达到以下能力:
 
 * 【直接】支持跨设备(Mac/iPad/iPhone 等等)编程，同时保证多端编程环境统一。
-* 【直接】支持在 Web 端提交 git 代码。
-* 【间接】解放背包重量。
+* 【直接】支持在 web 端提交 git 代码。
+* 【间接】解放背包重量😁。
 
 至于将 code-server 部署在树莓派上相比云端服务器好处是综合成本低，后续若要更换云服务器，只需更改内网映射端口即可，迁移会十分便捷。
 
@@ -191,25 +191,21 @@ server {
 }
 ```
 
-重新加载 nginx 配置后，此时终于实现了在 web 端使用上 code-server 的能力。
+重新加载 nginx 配置后，此时已经可以在 web 端使用上 code-server 的能力。
 
 ![](http://with.muyunyun.cn/c8b78a74fccd162ef97ecd2b53da09f4.jpg-400)
 
-### code-server 同步 ssh
+### 在 web 端中提交 git 代码
 
-登入树莓派端，输入
+登入树莓派端，执行如下命令生成 ssh 密钥:
 
 ```bash
+# 以 github 为例
 ssh-keygen -t rsa -C "youremail@example.com" -f ~/.ssh/github
 ```
 
-// todo 判断如下步骤是否必须
+然后将 ~/.ssh/github.pub 公钥中的内容复制到剪贴板，拷贝到 [GitHub ssh](https://github.com/settings/keys) 的 Key 文本框中。
 
-将 ~/.ssh/github.pub 公钥中的内容复制到剪贴板，拷贝到 [GitHub ssh](https://github.com/settings/keys) 的 Key 文本框中。
+经验证，至此已经可以在 web 中提交代码到 github。
 
-执行以下命令测试是否认证成功
-
-```bash
-ssh -T git@github.com
-# Hi github! You've successfully authenticated, but GitHub does not provide shell access.
-```
+![](http://with.muyunyun.cn/924eb6f01775b8a455b6bb5107bd202c.jpg-400)
