docs: update raspberryPi

--- a/RaspberryPi/1.树莓派简介&烧录系统.md
+++ b/RaspberryPi/1.树莓派简介&烧录系统.md
@@ -9,6 +9,17 @@ title: 树莓派简介&烧录系统
 
 对于开源极客爱好者，可以把树莓派改造成，家庭影院、服务器、无线路由器、BT 下载服务器、FTP 服务器、智能小车、AI 人工智能、智能家居、3D 打印等等。
 
+* [树莓派到底可以用来做什么](https://zhuanlan.zhihu.com/p/166019428)
+  - [ ] [树莓派软路由](https://www.v2fy.com/p/2021-07-04-openwrt-4b-1625383754000/)
+* [科技爱好者博客](https://www.lxx1.com/4139)
+  * (Todo)[树莓派+Homebriage+米家智能产品搭建Siri智能家居](https://www.lxx1.com/3220)
+  * [树莓派安装 OpenWrt 打造超级路由器](https://www.lxx1.com/3294)
+  * 魔镜
+  * [树莓派挂载 U 盘或者移动硬盘](https://www.lxx1.com/4181)
+* 社区
+  * [树莓派吧](http://www.shumeipaiba.com/)
+  * [树莓派实验室](https://shumeipai.nxez.com/)
+
 ### 树莓派操作系统
 
 树莓派主板是没有自带系统的，就相当于一个 PC 电脑主板，系统需要自己安装在内存卡里，插上卡才能启动系统。
