docs: react conf 2021

--- a/React/conf/2021.md
+++ b/React/conf/2021.md
@@ -14,8 +14,14 @@
   * UseId: 后续待探究，是否使用该 hooks 可以避免组件多一次 render 的问题。
   * UseInsertionEffect: for helping CSS-IN-JS libraries.
 * [React Developer Tooling](https://youtu.be/8dUpL8SCO1w?t=6086) 1:41:26
+* [React Without Memo](https://youtu.be/8dUpL8SCO1w?t=6855) 1:54:15
+  * React Forget
+* [React Docs Keynote](https://youtu.be/8dUpL8SCO1w?t=8116) 2:15:16
+* [Things I Learnt from the New React Docs](https://youtu.be/8dUpL8SCO1w?t=8722) 2.25:22
+* [Learning in the Browser——zero to React in One Window](https://youtu.be/8dUpL8SCO1w?t=9281) 2:34:41
+* [The ROI OF Designing With React](https://youtu.be/8dUpL8SCO1w?t=9925) 2:45:25
 
-watch [1:49:39](https://youtu.be/8dUpL8SCO1w?t=6579)
+watch to 2:45:25
 
 
 ### Link
