dos: update react conf

--- a/React/conf/2021.md
+++ b/React/conf/2021.md
@@ -20,8 +20,10 @@
 * [Things I Learnt from the New React Docs](https://youtu.be/8dUpL8SCO1w?t=8722) 2.25:22
 * [Learning in the Browser——zero to React in One Window](https://youtu.be/8dUpL8SCO1w?t=9281) 2:34:41
 * [The ROI OF Designing With React](https://youtu.be/8dUpL8SCO1w?t=9925) 2:45:25
+* [Interactive Playgrounds with React](https://youtu.be/8dUpL8SCO1w?t=10592) 2:56:32
+* [Re-introducing Relay](https://youtu.be/8dUpL8SCO1w?t=11722) 3:15:22
 
-watch to 2:45:25
+watch to 3:25:46
 
 
 ### Link
