docs: react conf 2021

--- a/React/conf/2021.md
+++ b/React/conf/2021.md
@@ -22,8 +22,9 @@
 * [The ROI OF Designing With React](https://youtu.be/8dUpL8SCO1w?t=9925) 2:45:25
 * [Interactive Playgrounds with React](https://youtu.be/8dUpL8SCO1w?t=10592) 2:56:32
 * [Re-introducing Relay](https://youtu.be/8dUpL8SCO1w?t=11722) 3:15:22
+* [React Native Desktop](https://youtu.be/8dUpL8SCO1w?t=12892) 3:34:52
 
-watch to 3:25:46
+watch to 3:35:34
 
 
 ### Link
