docs: react conf 2021

--- a/React/conf/2021.md
+++ b/React/conf/2021.md
@@ -23,8 +23,10 @@
 * [Interactive Playgrounds with React](https://youtu.be/8dUpL8SCO1w?t=10592) 2:56:32
 * [Re-introducing Relay](https://youtu.be/8dUpL8SCO1w?t=11722) 3:15:22
 * [React Native Desktop](https://youtu.be/8dUpL8SCO1w?t=12892) 3:34:52
+* [On-device Machine Learning for React Native](https://youtu.be/8dUpL8SCO1w?t=13825) 3:50:25
+* [React 18 for External Store Libraries](https://youtu.be/8dUpL8SCO1w?t=15323) 4:15:23
 
-watch to 3:35:34
+watch to 4:19:38
 
 
 ### Link
