--- a/LeetCode/337.House_Robber_III.md
+++ b/LeetCode/337.House_Robber_III.md
@@ -19,8 +19,6 @@ Example 1:
         ↘        ↘
           3         1
 
-
-
 Input: root = [3,2,3,null,3,null,1]
 Output: 7
 Explanation: Maximum amount of money the thief can rob = 3 + 3 + 1 = 7.
@@ -44,7 +42,21 @@ Explanation: Maximum amount of money the thief can rob = 4 + 5 = 9.
   * The number of nodes in the tree is in the range [1, 104].
   * 0 <= Node.val <= 104
 
+```js
+               3
+            ↙   ↘
+          4         5
+       ↙   ↘        ↘
+     1        3         1
+  ↙   ↘             ↙   ↘
+8        6          5        6
+```
+
 ### Analyze
+
+根据题目可知，`可盗取最大值 f(root) = Math.max(root.val + f(root 的孙节点), f(root 的子节点))`，提供以下两种解题方式：
+
+* 方法一：使用递归解题
 
 ```js
 /**
@@ -60,6 +72,18 @@ Explanation: Maximum amount of money the thief can rob = 4 + 5 = 9.
  * @return {number}
  */
 var rob = function(root) {
-
-};
+  if (!root) return 0
+  return Math.max(
+    root.val
+    + (root.left && root.left.left ? rob(root.left.left) : 0)
+    + (root.left && root.left.right ? rob(root.left.right) : 0)
+    + (root.right && root.right.left ? rob(root.right.left) : 0)
+    + (root.right && root.right.right ? rob(root.right.right) : 0),
+    (root.left ? rob(root.left) : 0)
+    + (root.right ? rob(root.right) : 0)
+  )
+}
 ```
+
+* 方法二：使用动态规划
+
