--- a/LeetCode/337.House_Robber_III.md
+++ b/LeetCode/337.House_Robber_III.md
@@ -42,21 +42,9 @@ Explanation: Maximum amount of money the thief can rob = 4 + 5 = 9.
   * The number of nodes in the tree is in the range [1, 104].
   * 0 <= Node.val <= 104
 
-```js
-               3
-            ↙   ↘
-          4         5
-       ↙   ↘        ↘
-     1        3         1
-  ↙   ↘             ↙   ↘
-8        6          5        6
-```
-
 ### Analyze
 
-根据题目可知，`可盗取最大值 f(root) = Math.max(root.val + f(root 的孙节点), f(root 的子节点))`，提供以下两种解题方式：
-
-* 方法一：使用递归解题
+根据题目可知，`可盗取最大值 f(root) = Math.max(root.val + f(root 的孙节点), f(root 的子节点))`，顺势使用递归解题：
 
 ```js
 /**
@@ -85,5 +73,39 @@ var rob = function(root) {
 }
 ```
 
-* 方法二：使用动态规划
+此时解题超时，在递归基础上加上缓存：
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number}
+ */
+var rob = function(root) {
+  const cache = {}
+  return robRecursive(root, cache)
+}
+
+function robRecursive(node, cache) {
+  if (!node) return 0
+  // cache left
+  // cache right
+  return Math.max(
+    node.val
+    + (node.left && node.left.left ? rob(node.left.left) : 0)
+    + (node.left && node.left.right ? rob(node.left.right) : 0)
+    + (node.right && node.right.left ? rob(node.right.left) : 0)
+    + (node.right && node.right.right ? rob(node.right.right) : 0),
+    (node.left ? rob(node.left) : 0)
+    + (node.right ? rob(node.right) : 0)
+  )
+}
+```
 
