--- a/LeetCode/337.House_Robber_III.md
+++ b/LeetCode/337.House_Robber_III.md
@@ -89,7 +89,9 @@ var rob = function(root) {
  * @return {number}
  */
 var rob = function(root) {
-  const cache = {}
+  const cache = {
+    index: 0
+  }
   return robRecursive(root, cache)
 }
 
@@ -99,12 +101,12 @@ function robRecursive(node, cache) {
   // cache right
   return Math.max(
     node.val
-    + (node.left && node.left.left ? rob(node.left.left) : 0)
-    + (node.left && node.left.right ? rob(node.left.right) : 0)
-    + (node.right && node.right.left ? rob(node.right.left) : 0)
-    + (node.right && node.right.right ? rob(node.right.right) : 0),
-    (node.left ? rob(node.left) : 0)
-    + (node.right ? rob(node.right) : 0)
+    + (node.left && node.left.left ? robRecursive(node.left.left, cache) : 0)
+    + (node.left && node.left.right ? robRecursive(node.left.right, cache) : 0)
+    + (node.right && node.right.left ? robRecursive(node.right.left, cache) : 0)
+    + (node.right && node.right.right ? robRecursive(node.right.right, cache) : 0),
+    (node.left ? robRecursive(node.left) : 0)
+    + (node.right ? robRecursive(node.right) : 0)
   )
 }
 ```
