--- a/LeetCode/337.House_Robber_III.md
+++ b/LeetCode/337.House_Robber_III.md
@@ -97,17 +97,16 @@ var rob = function(root) {
 
 function robRecursive(node, cache) {
   if (!node) return 0
-  // cache left
-  // cache right
-  return Math.max(
+  if (typeof cache[cache.index] === 'number') return cache[cache.index]
+  const index = cache.index = cache.index + 1
+  return cache[index] = Math.max(
     node.val
     + (node.left && node.left.left ? robRecursive(node.left.left, cache) : 0)
     + (node.left && node.left.right ? robRecursive(node.left.right, cache) : 0)
     + (node.right && node.right.left ? robRecursive(node.right.left, cache) : 0)
     + (node.right && node.right.right ? robRecursive(node.right.right, cache) : 0),
-    (node.left ? robRecursive(node.left) : 0)
-    + (node.right ? robRecursive(node.right) : 0)
+    (node.left ? robRecursive(node.left, cache) : 0)
+    + (node.right ? robRecursive(node.right, cache) : 0)
   )
 }
 ```
-
