docs: Map vs. Object

--- a/LeetCode/337.House_Robber_III.md
+++ b/LeetCode/337.House_Robber_III.md
@@ -96,6 +96,7 @@ var rob = function(root) {
 }
 
 function robRecursive(node, cache) {
+  console.log('cache', cache)
   if (!node) return 0
   if (typeof cache[cache.index] === 'number') return cache[cache.index]
   const index = cache.index = cache.index + 1
