docs: show img preview vscode

--- a/LeetCode/337.House_Robber_III.md
+++ b/LeetCode/337.House_Robber_III.md
@@ -73,7 +73,9 @@ var rob = function(root) {
 }
 ```
 
-此时解题超时，在递归基础上加上缓存：
+此时解题超时，接着进行优化。
+
+#### 在递归基础上加上缓存
 
 ```js
 /**
@@ -89,18 +91,15 @@ var rob = function(root) {
  * @return {number}
  */
 var rob = function(root) {
-  const cache = {
-    index: -1
-  }
+  const cache = new Map()
   return robRecursive(root, cache)
 }
 
 function robRecursive(node, cache) {
-  console.log('cache', cache)
   if (!node) return 0
-  if (typeof cache[cache.index] === 'number') return cache[cache.index]
+  if (cache.get(node)) return cache.get(node)
   const index = cache.index = cache.index + 1
-  return cache[index] = Math.max(
+  const curNodeMax = Math.max(
     node.val
     + (node.left && node.left.left ? robRecursive(node.left.left, cache) : 0)
     + (node.left && node.left.right ? robRecursive(node.left.right, cache) : 0)
@@ -109,5 +108,18 @@ function robRecursive(node, cache) {
     (node.left ? robRecursive(node.left, cache) : 0)
     + (node.right ? robRecursive(node.right, cache) : 0)
   )
+  cache.set(node, curNodeMax)
+
+  return curNodeMax
 }
+```
+
+> 技巧小结：使用 map 代替 object 来记录缓存，参考 http://muyunyun.cn/blog/c1nhctpd
+
+#### 基于树状结构的动态规划
+
+经分析，与[动态规划](https://muyunyun.cn/wjncoyei)对应的遍历方法为后序遍历。
+
+```js
+
 ```
