lc: solve recursive in 337

--- a/LeetCode/337.House_Robber_III.md
+++ b/LeetCode/337.House_Robber_III.md
@@ -121,5 +121,22 @@ function robRecursive(node, cache) {
 经分析，与[动态规划](https://muyunyun.cn/wjncoyei)对应的遍历方法为后序遍历。
 
 ```js
+/**
+ * @param {TreeNode} root
+ * @return {number}
+ */
+var rob = function(root) {
+  return postRecursive(root)
+}
 
+function postRecursive(node) {
+  if (!node) return 0
+  const maxLeft = node.left
+    ? math.max(postRecursive(node.left.left), postRecursive(node.left.right))
+    : 0
+  const maxRight = node.right
+    ? math.max(postRecursive(node.right.left), postRecursive(node.right.right))
+    : 0
+  return root.val + Math.max(maxLeft + maxRight)
+}
 ```
