--- a/LeetCode/337.House_Robber_III.md
+++ b/LeetCode/337.House_Robber_III.md
@@ -120,6 +120,8 @@ function robRecursive(node, cache) {
 
 经分析，与[动态规划](https://muyunyun.cn/wjncoyei)对应的遍历方法为后序遍历。
 
+> 如何优化去除缓存？
+
 ```js
 /**
  * @param {TreeNode} root
@@ -131,12 +133,16 @@ var rob = function(root) {
 
 function postRecursive(node) {
   if (!node) return 0
+
   const maxLeft = node.left
-    ? math.max(postRecursive(node.left.left), postRecursive(node.left.right))
+    ? Math.max(postRecursive(node.left.left), postRecursive(node.left.right))
     : 0
   const maxRight = node.right
-    ? math.max(postRecursive(node.right.left), postRecursive(node.right.right))
+    ? Math.max(postRecursive(node.right.left), postRecursive(node.right.right))
     : 0
-  return root.val + Math.max(maxLeft + maxRight)
+  return Math.max(
+    node.val + Math.max(maxLeft + maxRight),
+    postRecursive(node.left) + postRecursive(node.right)
+  )
 }
 ```
