docs: mobile_scene

--- a/LeetCode/337.House_Robber_III.md
+++ b/LeetCode/337.House_Robber_III.md
@@ -141,6 +141,7 @@ function postRecursive(node) {
     ? Math.max(postRecursive(node.right.left), postRecursive(node.right.right))
     : 0
   return Math.max(
+    // 这里逻辑需要进一步思考
     node.val + Math.max(maxLeft + maxRight),
     postRecursive(node.left) + postRecursive(node.right)
   )
@@ -149,3 +150,5 @@ function postRecursive(node) {
 
 最后执行的输入：
 [4,2,null,1,3]
+* 预期: 8
+* 实际: 7
