--- a/LeetCode/337.House_Robber_III.md
+++ b/LeetCode/337.House_Robber_III.md
@@ -118,9 +118,12 @@ function robRecursive(node, cache) {
 
 #### 基于树状结构的动态规划
 
-经分析，与[动态规划](https://muyunyun.cn/wjncoyei)对应的遍历方法为后序遍历。
+> 前置知识点：在 Tree 数据结构中，使用后序遍历可以达到[动态规划](https://muyunyun.cn/wjncoyei)中至底向上遍历的效果。
 
-> 如何优化去除缓存？
+当前节点可盗取最大值为 `Max{f(node), g(node)}`，其中 f(node) 表示当前 node 节点被选中时的最大值，g(node) 表示当前节点非选中时的最大值。
+
+* 当 node 节点为选中时，node 相邻子节点均不可被选中，此时 f(node) = g(l) + g(r);
+* 当 node 节点为非选中时，g(node) 为左侧子节点选中与非选中态下的最大值与右侧子节点选中与非选中态下的最大值之和，即 g(node) = Max{f(l), g(l)} + Max{f(r), g(r)};
 
 ```js
 /**
@@ -128,27 +131,19 @@ function robRecursive(node, cache) {
  * @return {number}
  */
 var rob = function(root) {
-  return postRecursive(root)
+  const [selected, notSelected] = postRecursive(root)
+  return Math.max(selected, notSelected)
 }
 
 function postRecursive(node) {
-  if (!node) return 0
+  if (!node) return [0, 0]
 
-  const maxLeft = node.left
-    ? Math.max(postRecursive(node.left.left), postRecursive(node.left.right))
-    : 0
-  const maxRight = node.right
-    ? Math.max(postRecursive(node.right.left), postRecursive(node.right.right))
-    : 0
-  return Math.max(
-    // 这里逻辑需要进一步思考
-    node.val + Math.max(maxLeft + maxRight),
-    postRecursive(node.left) + postRecursive(node.right)
-  )
+  const l = postRecursive(node.left)
+  const r = postRecursive(node.right)
+
+  const selected = node.val + l[1] + r[1]
+  const notSelected = Math.max(l[0], l[1]) + Math.max(r[0], r[1])
+
+  return [selected, notSelected]
 }
 ```
-
-最后执行的输入：
-[4,2,null,1,3]
-* 预期: 8
-* 实际: 7
