--- a/BasicSkill/css/css_little_book/字体排印.md
+++ b/BasicSkill/css/css_little_book/字体排印.md
@@ -36,9 +36,17 @@ abbrlink: r4hbi1fx
 (100 / document.documentElement.clientWidth)vw = 1px
 ```
 
+`px` 与 `rem` 单位间的转换:
+
+```js
+rem * (100vw / 3.75) = px
+```
+
+因而 rem 与 px 的比率为: 3.75 / 100vw 或者 3.75 / (document.documentClientWidht.clientWidth)
+
 #### rem 的使用
 
-通常将 `1rem` 设置为 `100px`, (经过测试 10px/1px 也是可以的)
+移动端中，通常将 `1rem` 设置为 `100px`, (一般不设置为 10px/1px 的原因是在移动端机型中存在 12px 最小显示字体限制)
 
 <details>
   <summary>相关测试</summary>
