docs: add abbrlink

--- a/LeetCode/416.Pacific_Atlantic_Water_Flow.md
+++ b/LeetCode/416.Pacific_Atlantic_Water_Flow.md
@@ -1,3 +1,8 @@
+<!--
+abbrlink: qq9zzeze
+tags: [’背包问题‘]
+-->
+
 ### 416. Partition Equal Subset Sum
 
 Given a non-empty array nums containing only positive integers, find if the array can be partitioned into two subsets such that the sum of elements in both subsets is equal.
@@ -72,9 +77,10 @@ var recursive = function(nums, index, target, cache) {
 
 以 `nums = [1,5,11,5]` 为例进行分析：
 
-* 初始状态：
+> dp[i][j] 的语义：在 nums 数组 0 到 i 的范围内，挑选若干个值，使它们之和为 j。
+
+* 初始状态：dp[0][j]
 * 状态转移：dp[i][j] = dp[i - 1][j] || dp[i - 1][j - nums[i]]
-  * dp[i][j] 的语义：在 nums 数组 0 到 i 的范围内，挑选若干个值，使它们之和为 j。
 
 | 物品容量\背包容量 | 0    | 1    | 2    | 3    | 4    | 5    | 6    | 7    | 8    | 9    | 10   | 11   |
 | :---------------- | :--- | :--- | :--- | :--- | :--- | :--- | :--- | :--- | :--- | :--- | :--- | :--- |
@@ -96,17 +102,46 @@ var canPartition = function(nums) {
     sum += nums[i]
   }
   if (sum % 2 !== 0) return false
-  const target = sum / 2
-  // [[pick, no pick]]
-  const arr = [
-    [nums[0], 0]
-  ]
-  for (let i = 1; i < nums.length; i++) {
-    arr[i] = [
-arr[i - 1][0] + nums[i]
-    ]
+
+  const arr = [[true]]
+  for (let j = 1; j <= sum / 2; j++) {
+    arr[0][j] = j === nums[0]
   }
 
-  return false
+  for (let i = 1; i < nums.length; i++) {
+    for (let j = 0; j <= sum / 2; j++) {
+      if (!arr[i]) {
+        arr[i] = []
+      }
+      arr[i][j] = arr[i - 1][j] || arr[i - 1][j - nums[i]] || false
+    }
+  }
+
+  return arr[nums.length - 1][sum / 2]
+}
+```
+
+当前开辟了`背包容量 * 物品容量`个空间，根据状态转移公式 dp[i][j] = dp[i - 1][j] || dp[i - 1][j - nums[i]] 可以发现，空间其实只用开辟`背包容量 * 2行`就可以满足该需求，甚至只需要`背包容量 * 1行`也可以满足，从而将二维数组转化为一维数组。接着来进一步优化：
+
+```js
+var canPartition = function(nums) {
+  let sum = 0
+  for (let i = 0; i < nums.length; i++) {
+    sum += nums[i]
+  }
+  if (sum % 2 !== 0) return false
+
+  const arr = [true]
+  for (let j = 1; j <= sum / 2; j++) {
+    arr[j] = j === nums[0]
+  }
+
+  for (let i = 1; i < nums.length; i++) {
+    for (let j = sum / 2; j >= 0; j--) {
+      arr[j] = arr[j] || arr[j - nums[i]] || false
+    }
+  }
+
+  return arr[sum / 2]
 }
 ```
