--- a/BasicSkill/composition_principle/计算机组成原理.md
+++ b/BasicSkill/composition_principle/计算机组成原理.md
@@ -2,6 +2,14 @@
 abbrlink: tq8wd9nw
 -->
 
+- [计算机组成原理](#计算机组成原理)
+  - [计算机的发展历史](#计算机的发展历史)
+  - [现代计算机的结构](#现代计算机的结构)
+  - [计算机的层次与编程语言](#计算机的层次与编程语言)
+  - [计算机的计算单位](#计算机的计算单位)
+    - [容量单位](#容量单位)
+    - [速度单位](#速度单位)
+
 # 计算机组成原理
 
 ## 计算机的发展历史
@@ -10,21 +18,21 @@ abbrlink: tq8wd9nw
 
 ![](http://with.muyunyun.cn/20f4d05194338094b21defa7977c357e.jpg)
 
-* 第一阶段: 电子管计算机
+第一阶段: 电子管计算机
 
 ![](http://with.muyunyun.cn/981859a7e9a5f642c802559466682ac1.jpg-300)
 
 ![](http://with.muyunyun.cn/fdb522e3b98b19ec07dac13b147ad5a3.jpg-300)
 
-* 第二阶段: 晶体管计算机
+第二阶段: 晶体管计算机
 
 ![](http://with.muyunyun.cn/3740ffbc8eedba24e33c53ce4f59b32e.jpg-400)
 
-* 第三阶段: 集成电路计算机
+第三阶段: 集成电路计算机
 
 ![](http://with.muyunyun.cn/4afca0d86589e900ffd34193b27261de.jpg-300)
 
-* 第四阶段: 超大规模集成电路计算机
+第四阶段: 超大规模集成电路计算机
 
 ![](http://with.muyunyun.cn/fbbcdc55d25e0266ff29a3154496c5d0.jpg)
 
@@ -34,24 +42,22 @@ abbrlink: tq8wd9nw
 
 ## 计算机的层次与编程语言
 
-* 编译型语言:
+* 编译型语言: 经过编译器将高级语言转化生成为计算机实际执行的语言;
   * 常见语言: C、C++、Object-C、Golang;
-  * 经过编译器将高级语言转化生成为计算机实际执行的语言;
-* 解释型语言:
+* 解释型语言: 经过解释器(低级语言写的程序)转换为实际执行的语言;
   * 常见语言: JavaScript、Python、Php、Perl、Lua;
-  * 经过解释器(低级语言写的程序)转换为实际执行的语言;
 * 编译 + 解释型语言:
   * Java、C#、Kotlin;
 
-以 C 语言和 JavaScript 语言为例, C 语言要编写完整, 然后使用编译器编译成一个二进制文件才可以执行, 在编译的过程会把整个程序进行彻底的翻译和优化, 再输出平台可以直接运行的二进制文件。而 JavaScript 是在浏览器 V8 引擎解释执行的, 写好直接就可以运行了, 没有经过编译阶段, 直接是把 JavaScript 代码一句一句解释执行的。
+以 C 语言和 JavaScript 语言为例，C 语言要编写完整，然后使用编译器编译成一个二进制文件才可以执行，在编译的过程会把整个程序进行彻底的翻译和优化，再输出平台可以直接运行的二进制文件。而 JavaScript 是在浏览器 V8 引擎解释执行的，写好直接就可以运行了，没有经过编译阶段，直接是把 JavaScript 代码一句一句解释执行的。
 
 ## 计算机的计算单位
 
-容量单位
+### 容量单位
 
 ![](http://with.muyunyun.cn/5cb5ecfcdb8dc250e1c981268d0b990d.jpg)
 
-* 为什么网上买的移动硬盘 500 G, 格式化之后只有 465 G 了?
+为什么网上买的移动硬盘 500 G，格式化之后只有 465 G 了?
 
 答: 因为硬盘生产商一般用 10^3 来便于沟通交流。
 
@@ -61,14 +67,14 @@ abbrlink: tq8wd9nw
 500 * (1024^3) / (1000^3) ≈ 465
 ```
 
-速度单位
+### 速度单位
 
-* 为什么电信拉的 100M 光纤, 测试峰值速度只有 12M 每秒。
+为什么电信拉的 100M 光纤，测试峰值速度只有 12M 每秒。
 
 因为网络常用单位是 Mbps;
 
 ```
-100M/s === 100Mbit/s === (100/8)B/s
+100M/s === 100Mbit/s === (100/8)MB/s
 ```
 
 Read To: 3 - 6
