--- a/BasicSkill/css/css_little_book/文本属性.md
+++ b/BasicSkill/css/css_little_book/文本属性.md
@@ -12,6 +12,7 @@ abbrlink: mbmn6zoi
   * justify 的含义是两边缘对齐, 中间用空格填补;
 * `line-height`: 行高。
   * 行高与 `font-size` 之差为行间距;
+  * 默认值为 'normal', 开发组件时尽量每一个元素根节点都带上 line-height 属性，避免被全局样式影响。
   * 文本垂直居中可以这样写:
 
 ```css
@@ -51,5 +52,3 @@ abbrlink: mbmn6zoi
 | pre      | 保留   | 保留   | 不允许   |
 | pre-line | 合并   | 保留   | 允许     |
 | pre-wrap | 保留   | 保留   | 允许     |
-
-阅读完第 6 章
