--- a/BasicSkill/css/css_little_book/背景与边框.md
+++ b/BasicSkill/css/css_little_book/背景与边框.md
@@ -9,6 +9,20 @@ abbrlink: gk71zyg4
 * `background-origin`: 属性值有 `border-box/padding-box/content-box`。默认为 `padding-box`。
 * `background-clip`: The background-clip CSS property sets whether an element's background extends underneath its border box, padding box, or content box. 属性值有 `border-box/padding-box/content-box`。默认值为 `border-box`。
 
+### 边框
+
+* 圆角效果 `border-radius`
+
+```css
+.demo {
+  border-radios: 100px / 10px (水平半径 100, 垂直半径 10)
+}
+```
+
+* 阴影 `box-shadow`: X 轴偏移量 Y 轴偏移量 [阴影模糊半径] [阴影扩展半径] [阴影颜色] [投影方式];（阴影模糊半径：只能是正值；阴影扩展半径：可以是正负值）（自带边框）
+
+> 外阴影 x 和 y(正值)出现在右下；内阴影 x 和 y(正值)出现在左上;
+
 #### 图片自适应
 
 ```css
