--- a/RaspberryPi/linux/常用命令.md
+++ b/RaspberryPi/linux/常用命令.md
@@ -40,6 +40,7 @@ abbrlink: mbrsm6kj
   - [alias](#alias)
 - [系统进程](#系统进程)
   - [ps](#ps)
+  - [kill](#kill)
 - [用户管理](#用户管理)
   - [chsh](#chsh)
   - [users](#users)
@@ -626,6 +627,27 @@ ps 命令涵盖命令参数三大风格
 ```bash
 # 配合 grep 查询指定进程, -a means: all, -f means full
 ps -af | grep nginx
+```
+
+### kill
+
+结束程序，kill 命令只支持进程id杀死，不支持进程名称。
+
+进程信号
+
+| 信号  | 名称  |    描述    |
+| :---: | :---: | :--------: |
+|   3   | QUIT  |  结束运行  |
+|   9   | KILL  | 无条件终止 |
+|  15   | TERM  | 尽可能终止 |
+
+```bash
+# 杀死 pid 为88 进程，不带参数默认等价 kill -15
+$ kill 88
+
+# 无条件终止进程，以下是等价，可以用进程名称信号
+$ kill -KILL 88
+$ kill -9 88
 ```
 
 ## 用户管理
