--- a/RaspberryPi/linux/常用命令.md
+++ b/RaspberryPi/linux/常用命令.md
@@ -449,7 +449,7 @@ tree -L 3
 
 * 软链接也可以叫符号链接：
   * 软链接，以路径的形式存在。类似于 Windows 操作系统中的快捷方式;
-  * 软链接可以 跨文件系统, 硬链接不可以;
+  * 软链接可以跨文件系统, 硬链接不可以;
   * 软链接可以对一个不存在的文件名进行链接;
   * 软链接可以对目录进行链接;
 * 硬链接:
@@ -625,13 +625,13 @@ ps 命令涵盖命令参数三大风格
 * GNU 风格, 全称 "Gnu's Not Unix", `前面加双破折线`
 
 ```bash
-# 配合 grep 查询指定进程, -a means: all, -f means full
+# 配合 grep 查询指定进程, -a means all, -f means full
 ps -af | grep nginx
 ```
 
 ### kill
 
-结束程序，kill 命令只支持进程id杀死，不支持进程名称。
+结束程序，kill 命令只支持进程 id 杀死，不支持进程名称。
 
 进程信号
 
