docs: update apple skill

--- a/RaspberryPi/linux/常用命令.md
+++ b/RaspberryPi/linux/常用命令.md
@@ -25,6 +25,7 @@ abbrlink: mbrsm6kj
   - [open](#open)
   - [source](#source)
   - [tree](#tree)
+  - [输出当前项目目录结构](#输出当前项目目录结构)
   - [ln](#ln)
   - [file](#file)
   - [tar](#tar)
@@ -431,15 +432,19 @@ echo $(getName)
 # 递归当前目录下所有文件并生成目录树
 tree
 
-# -I 忽略某些目录
-tree -I "node_modules"
-
 # 只显示目录
 tree -d
+
+# -I 忽略某些目录
+tree -I "node_modules"
 
 # 指定要递归的目录层级
 tree -L 3
 ```
+
+> 小建议：可以使用 `tree -L 3 -I "node_modules"` 来输出当前项目目录结构。
+
+### 输出当前项目目录结构
 
 ### ln
 
@@ -597,6 +602,20 @@ lsof
 
 # 查看指定端口被占用情况，(i means IP)
 lsof -i:8080
+```
+
+使用命令 lsof -i:8080 显示查询结果如下：
+
+```bash
+COMMAND PID  USER   FD   TYPE             DEVICE SIZE/OFF NODE NAME
+```
+
+使用 lsof 命令后，常常配合 kill 命令一起使用来杀死占用端口。
+
+比如杀死占用端口的进程(PID 为 [1] 命令查看到的占用端口)命令为：
+
+```bash
+kill -9 PID
 ```
 
 ### alias
