docs: 基于树莓派部署filebrowser

--- a/RaspberryPi/7.基于树莓派部署code-server.md
+++ b/RaspberryPi/7.基于树莓派部署code-server.md
@@ -125,7 +125,7 @@ pm2 save
 
 ### 支持在 HTTPS 协议中访问 WebSocket
 
-在配置完 HTTPS 服务后，访问 HTTPS 链接发现还是无法在 web 端正常使用 vscode，排查发现 code-server 使用 WebSocket 以保持长连接，因此需要在 nginx 配置文件中增加对 [WebSocket 配置](http://nginx.org/en/docs/http/websocket.html)。
+在配置完 HTTPS 服务后，访问 HTTPS 链接发现还是无法在 web 端正常使用 vscode，排查发现 code-server 使用 WebSocket 以保持长连接，因此需要在 nginx 配置(云服务器端)文件中增加对 [WebSocket 配置](http://nginx.org/en/docs/http/websocket.html)。
 
 执行 `vim /etc/nginx/conf.d/www.muyunyun.cn.conf` 进行编辑，完整的 nginx 配置如下:
 
