docs: update charles

--- a/BasicSkill/css/css_little_book/选择器.md
+++ b/BasicSkill/css/css_little_book/选择器.md
@@ -10,6 +10,8 @@ abbrlink: 6lj5kmln
 
 > 对比: `p span {}` 意为 p 元素后面跟着 span 的情形
 
+> See more in [CSS_Selectors](http://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors)
+
 #### 相邻选择器 (~)
 
 * `p ~ span {}` 意为与 p 元素`同级别`且位于 p 元素之后`所有`的 span 标签会生效
