docs: update smart_home

--- a/React/从0到1实现React/18.服务端渲染.md
+++ b/React/从0到1实现React/18.服务端渲染.md
@@ -9,3 +9,7 @@ abbrlink: w8uuh39t
 * SEO
 * 首屏渲染体验
 * 前后端知识共享
+
+### Serverless
+
+Serverless 并不是 no 服务，而是将服务部署到全球各地(离用户更近)，企业不需要花费更多的成本(服务器可以利用得更加充分)，便能让用户享用到更流畅的页面与服务。
