docs: update some skill

--- a/BasicSkill/css/css_little_book/选择器.md
+++ b/BasicSkill/css/css_little_book/选择器.md
@@ -64,3 +64,8 @@ Id 选择器 > 类选择器 | 属性选择器 > 元素 > 通配选择器
   ...
 }
 ```
+
+### .element:hover 与 .element :hover 的区别？
+
+* .element:hover 意为伪元素只作用于 element 元素生效。
+* .element :hover 意为伪元素作用于 element 元素与其全部子元素。
