--- a/BasicSkill/css/css_little_book/背景与边框.md
+++ b/BasicSkill/css/css_little_book/背景与边框.md
@@ -19,7 +19,9 @@ abbrlink: gk71zyg4
 }
 ```
 
-* 阴影 `box-shadow`: X 轴偏移量 Y 轴偏移量 [阴影模糊半径] [阴影扩展半径] [阴影颜色] [投影方式];（阴影模糊半径：只能是正值；阴影扩展半径：可以是正负值）（自带边框）
+* 阴影 `box-shadow`: X 轴偏移量 Y 轴偏移量 [阴影模糊半径] [阴影扩展半径] [阴影颜色] [投影方式];
+  * 阴影模糊半径：只能是正值；
+  * 阴影扩展半径：可以是正负值；
 
 > 外阴影 x 和 y(正值)出现在右下；内阴影 x 和 y(正值)出现在左上;
 
