docs: update the almanack of naval ravikant

--- a/FeCloud/用户体验.md
+++ b/FeCloud/用户体验.md
@@ -6,6 +6,7 @@ abbrlink: vhy8ok42
 
 |  en   |        full name        |      mean      |                            explain                             |
 | :---: | :---------------------: | :------------: | :------------------------------------------------------------: |
+| TTFB  |   Time to First Byte    |   接收首字节   |                                                                |
 |  FP   |   First Content Paint   |    首屏绘制    |                                                                |
 |  FCP  | First Contentful Paint  |  首次内容渲染  |                                                                |
 |  FMP  | First Meaningful Paint  |  最大内容渲染  |                                                                |
