chore: update package

--- a/BasicSkill/basis/正则表达式.md
+++ b/BasicSkill/basis/正则表达式.md
@@ -99,3 +99,11 @@ abbrlink: 81uasrob
 ### update
 
 [?<=](https://github.com/tc39/proposal-regexp-lookbehind): now support match from right to left.
+
+### 可能有用
+
+以下脚本可以在 JavaScript/bash 中，均可运行。
+
+目的为搜索 order_id(区分大小写) 或订单编号。
+
+[oO]{1}[rR]{1}[dD]{1}[eE]{1}[rR]{1}_[iI]{1}[dD]{1}|订单编号
