--- a/Product/e-business/产品思考.md
+++ b/Product/e-business/产品思考.md
@@ -10,18 +10,4 @@ abbrlink: yn25617p
 |    KPI     | Key Performance Indication |  关键业绩指标  |
 
 * OKR: 方法论
-* KPI: ### 产品方法论
-
-* 职能范围
-  * 终端: BAPP、Windows 客户端、MMS 工作台、Mac 客户端、商家版小程序、多多公众号、商家服务号
-* 目标
-  * DAU
-  * 动销商家数
-    * 动销率: 店铺有销售的商品的数量 / 全店铺的商品数量比。
-* 主线
-  * 以小程序为基石的私域流量
-    * 提升 DAU
-  * 商家成长
-    * 通过商家成长, 中小商家成长为大商家
-  * 供应链
-    * 武汉、南昌
+* KPI
