docs: 补充阅读「程序员修炼之道」笔记

--- a/BasicSkill/life/books/程序员修炼之道.md
+++ b/BasicSkill/life/books/程序员修炼之道.md
@@ -1,3 +1,15 @@
 <!--
 abbrlink: 3i2dc0qm
 -->
+
+> 感谢 @xx 推荐并赠与该书给我。
+
+1. 对知识组合作定期投资。
+
+我理解所谓「知识组合」是工作领域、经验、计算机语言等等的组合。
+
+2. 关于 DRY —— Don't Reapeat Yourself。
+
+a. 关于重复写相同的逻辑导致的问题是「这不是记不记得的问题，而是什么时候会忘记的问题」。
+b. 【思考】组件化、模块化均遵循 DRY 原则。
+
