docs: 补充阅读「程序员修炼之道」笔记

--- a/BasicSkill/life/books/程序员修炼之道.md
+++ b/BasicSkill/life/books/程序员修炼之道.md
@@ -13,3 +13,9 @@ abbrlink: 3i2dc0qm
 a. 关于重复写相同的逻辑导致的问题是「这不是记不记得的问题，而是什么时候会忘记的问题」。
 b. 【思考】组件化、模块化均遵循 DRY 原则。
 
+3. 思考：正交性与 DRY(Don't Reapeat Yourself) 是否存在冲突？
+
+a. 正交性意为着修改代码模块 A 的改动不会对代码模块 B、模块 C 产生影响，因而也更容易测试。
+b. DRY 原则意为着避免书写重复的逻辑（包括代码、文档、产品、人员）。
+
+两者应该是相辅相成的关系，即高内聚(DRY)、低耦合(正交性)。
