--- a/BasicSkill/readES6/遍历语法.md
+++ b/BasicSkill/readES6/遍历语法.md
@@ -14,7 +14,13 @@ for (var index = 0; index < arr.length; index++) {
 }
 ```
 
-* 缺点：这种写法相对麻烦
+优点
+
+* 支持中途跳出，可使用 break 命令或 return 命令。
+
+缺点
+
+* 写法相对麻烦。
 
 ### forEach
 
@@ -54,6 +60,10 @@ for (let prop in arr) {
   console.log(prop) // '0' '1' '2' '3' '4'
 }
 ```
+
+优点
+
+* 支持中途跳出，可使用 break 命令或 return 命令。
 
 缺点：
 
