docs: day day up

--- a/BasicSkill/readES6/遍历语法.md
+++ b/BasicSkill/readES6/遍历语法.md
@@ -77,8 +77,12 @@ for (let prop in arr) {
 优点：
 
 * 有着同 for...in 一样的简洁语法, 但是没有 for...in 那些缺点;
-* 不同用于 forEach 方法, 它可以与 break、continue 和 return 配合使用
-* 提供了遍历所有数据结构的统一操作接口
+* 不同用于 forEach 方法, 它可以与 break、continue 配合使用；
+* 提供了遍历所有数据结构的统一操作接口；
+
+缺点：
+
+* 不支持配合 return 使用；
 
 下面是一个使用 break 语句, 跳出 for...of 循环的例子。
 
