--- a/BasicSkill/basis/正则表达式.md
+++ b/BasicSkill/basis/正则表达式.md
@@ -108,6 +108,10 @@ abbrlink: 81uasrob
 
 [oO]{1}[rR]{1}[dD]{1}[eE]{1}[rR]{1}_[iI]{1}[dD]{1}|订单编号
 
+### 如何搜索某个 API
+
+`Ellipsis[\s\n].*length`
+
 ### 小心正则中的 lastIndex 陷阱
 
 正则 lastIndex 位数的问题，不同规范版本对边界定义的差异蛮多，在循环中使用正则就非常容易踩坑。
