docs: update basic skill

--- a/BasicSkill/Shorcuts/易读错音的程序词汇.md
+++ b/BasicSkill/Shorcuts/易读错音的程序词汇.md
@@ -6,3 +6,5 @@ abbrlink: oh2njhvb
 
 * cache: [美: kæʃ]
 * babel: [美: 'beibəl]
+
+> [chinese-programmer-wrong-pronunciation](https://github.com/shimohq/chinese-programmer-wrong-pronunciation)
