docs: product learn

--- a/Product/e-business/产品思考.md
+++ b/Product/e-business/产品思考.md
@@ -2,12 +2,8 @@
 abbrlink: yn25617p
 -->
 
-### 方法论
+- [商品类目和属性的关系是什么？](#商品类目和属性的关系是什么)
 
-| short name |         full name          |      mean      |
-| :--------: | :------------------------: | :------------: |
-|    OKR     | Objectives and Key Results | 目标和关键结果 |
-|    KPI     | Key Performance Indication |  关键业绩指标  |
+### 商品类目和属性的关系是什么？
 
-* OKR: 方法论
-* KPI
+商品属性是商品类目的补充。商品属性的出现是为了解决仅靠商品类目会出现类目层次过深，类目分类杂乱的问题。也利好消费者更加便捷地搜索查询商品。
