--- a/Product/e-business/电商常见缩写术语.md
+++ b/Product/e-business/电商常见缩写术语.md
@@ -2,12 +2,12 @@
 abbrlink: kb3tez6q
 -->
 
-### short name
+### 电商常用指标术语
 
 | short name |        full name         |       mean       |                                             note                                             |
 | :--------: | :----------------------: | :--------------: | :------------------------------------------------------------------------------------------: |
 |    SKU     |    Stock Keeping Unit    |     库存单位     | SKU 是用来定价和管理库存的, 7Plus 有很多颜色, 很多配置, 每个颜色和配置的组合都会形成新的产品 |
-|    SPU     |  Standard Product Unit   |  标准化产品单元  |                           属性值、特性相同的商品就可以成为一个 SPU                            |
+|    SPU     |  Standard Product Unit   |  标准化产品单元  |                           属性值、特性相同的商品就可以成为一个 SPU                           |
 |    GMV     | Gross Merchandise Volume |   商品交易总额   |                                                                                              |
 |    DAU     |    Daily Active User     |    日活跃用户    |                                                                                              |
 |    MAU     |    Month Active User     |    月活跃用户    |                                                                                              |
@@ -39,7 +39,7 @@ abbrlink: kb3tez6q
 
 * 开店管理
 
-### title
+### 岗位
 
 | short name |       full name       |   mean   |
 | :--------: | :-------------------: | :------: |
@@ -47,16 +47,12 @@ abbrlink: kb3tez6q
 |     BI     | Business Intelligence | 数据分析 |
 |     PR     |  public relationship  | 公关关系 |
 
-### 商家端
+### 方法论
 
-MMS: Merchant Management System
+| short name |         full name          |      mean      |
+| :--------: | :------------------------: | :------------: |
+|    OKR     | Objectives and Key Results | 目标和关键结果 |
+|    KPI     | Key Performance Indication |  关键业绩指标  |
 
-* ToB
-  * 提升 B 端商家在平台中经营 (BDAU), 让卖家赚钱 (BGMV)
-* ToC
-  * 提升 C 端 (CDAU)、(CGMV)
-* ToP
-  * 平台调性/平台粘性/平台竞争力(进攻、防守)
-
-思考题: 提升商品种类的 KPI 背后价值是什么?
-
+* OKR: 方法论
+* KPI
