--- a/Product/e-business/电商产品思考.md
+++ b/Product/e-business/电商产品思考.md
@@ -4,6 +4,7 @@ abbrlink: yn25617p
 
 - [商品类目和属性的关系是什么？](#商品类目和属性的关系是什么)
 - [C2C、B2C、C2B 模式的区别是什么？](#c2cb2cc2b-模式的区别是什么)
+- [SPU、SKU 是什么？它们分别解决了什么问题？](#spusku-是什么它们分别解决了什么问题)
 
 ### 商品类目和属性的关系是什么？
 
@@ -17,3 +18,12 @@ abbrlink: yn25617p
 |  B2C  |   天猫、京东   |   抽佣   | 重质量 |
 |  C2B  | 聚划算、快团团 |          |        |
 |       |                |          |        |
+
+### SPU、SKU 是什么？它们分别解决了什么问题？
+
+|          short name          |      mean      |                                             note                                              |
+| :--------------------------: | :------------: | :-------------------------------------------------------------------------------------------: |
+| SPU（Standard Product Unit） | 标准化产品单元 |             `SPU 用于规范化产品`。属性值、特性相同的商品就可以成为一个 SPU。使。              |
+|  SKU（Stock Keeping Unit）   |    库存单位    | `SKU 用于管理库存`。iPhone 7Plus 有很多颜色，很多配置, 每个颜色和配置的组合都会形成新的 SPU。 |
+
+实际场景案例：商家发一个衣服，只能标注李宁牌、56789 货号衣服，并没法区分颜色、尺码。尽管此时显示李宁牌衣服库存为 1，但是买家还是没法买到目标颜色、尺码的衣服。因此在李宁牌、56789 货号（SPU）基础上增加了颜色、尺码（SKU）概念以用于管理库存。
