--- a/Product/产品方法论.md
+++ b/Product/产品方法论.md
@@ -2,7 +2,10 @@
 abbrlink: 1c2a612p
 -->
 
-### 产品方法论
+- [确定用户群体与核心需求](#确定用户群体与核心需求)
+- [关于漏斗效应](#关于漏斗效应)
+
+### 确定用户群体与核心需求
 
 步骤一：圈选`核心用户`；
 
@@ -15,3 +18,7 @@ abbrlink: 1c2a612p
 1. 列出用户的各种需求；（以新手买家为例，存在逛、购物、学习如何使用网站/APP等）
 2. 对需求做价值判断；（购物）
 3. 判断需求场景是否有必要再进行细分；（目标清晰的购物、目标模糊的购物、无目标的购物）
+
+### 关于漏斗效应
+
+多一层路径就意着有更多 PV 流失。
