docs: update product

--- a/Product/e-business/电商产品思考.md
+++ b/Product/e-business/电商产品思考.md
@@ -5,6 +5,7 @@ abbrlink: yn25617p
 - [商品类目和属性的关系是什么？](#商品类目和属性的关系是什么)
 - [C2C、B2C、C2B 模式的区别是什么？](#c2cb2cc2b-模式的区别是什么)
 - [SPU、SKU 是什么？它们分别解决了什么问题？](#spusku-是什么它们分别解决了什么问题)
+- [广告类型有哪几种？](#广告类型有哪几种)
 
 ### 商品类目和属性的关系是什么？
 
@@ -23,7 +24,22 @@ abbrlink: yn25617p
 
 |          short name          |      mean      |                                             note                                              |
 | :--------------------------: | :------------: | :-------------------------------------------------------------------------------------------: |
-| SPU（Standard Product Unit） | 标准化产品单元 |             `SPU 用于规范化产品`。属性值、特性相同的商品就可以成为一个 SPU。使。              |
+| SPU（Standard Product Unit） | 标准化产品单元 |               `SPU 用于规范化产品`。属性值、特性相同的商品就可以成为一个 SPU。                |
 |  SKU（Stock Keeping Unit）   |    库存单位    | `SKU 用于管理库存`。iPhone 7Plus 有很多颜色，很多配置, 每个颜色和配置的组合都会形成新的 SPU。 |
 
-实际场景案例：商家发一个衣服，只能标注李宁牌、56789 货号衣服，并没法区分颜色、尺码。尽管此时显示李宁牌衣服库存为 1，但是买家还是没法买到目标颜色、尺码的衣服。因此在李宁牌、56789 货号（SPU）基础上增加了颜色、尺码（SKU）概念以用于管理库存。
+实际场景案例：商家发一个衣服，只能标注李宁牌、56789 货号衣服，并没法区分颜色、尺码。尽管此时显示李宁牌衣服库存为 1，但是买家还是可能没法买到目标颜色、尺码的衣服。因此在李宁牌、56789 货号（SPU）基础上增加了颜色、尺码（SKU）概念以用于管理库存。
+
+### 广告类型有哪几种？
+
+|      short name      |                    mean                    |
+| :------------------: | :----------------------------------------: |
+|  CPT(Cost Per Time)  |                 按时长付费                 |
+|  CPM(Cost Per Mile)  |                 每千人成本                 |
+| CPC(Cost Per Click)  |               按单次点击扣费               |
+| CPS(Cost Per Sales)  | 按成交付费，以实际销售产品数量来计算广告费 |
+| CPA(Cost Per Action) |  按成交付费，按回应的有效问卷或订单来计费  |
+
+备注：
+* 对于网站主来说 CPT、CPM 模式会更为省心；
+* 对于广告主来说，CPS、CPA 模式会让其不花冤枉钱；
+* CPC 模式对网站主、广告主来说，相对中立；
