--- a/Product/e-business/电商常见缩写术语.md
+++ b/Product/e-business/电商常见缩写术语.md
@@ -2,6 +2,10 @@
 abbrlink: kb3tez6q
 -->
 
+- [电商常用指标术语](#电商常用指标术语)
+- [岗位](#岗位)
+- [方法论](#方法论)
+
 ### 电商常用指标术语
 
 | short name |        full name         |       mean       | note  |
@@ -34,8 +38,6 @@ abbrlink: kb3tez6q
 - [x] [拆解拼多多裂变活动：7 天新增 1700 万 DAU](http://www.woshipm.com/operate/2951693.html)
 - [x] [提升 DAU 的不同思路和策略](http://www.woshipm.com/operate/2739697.html)
 - [ ] [LTV 及 DAU 的计算、预估方法](http://www.woshipm.com/operate/4091166.html)
-
-* 开店管理
 
 ### 岗位
 
