--- a/Product/e-business/运营引流.md
+++ b/Product/e-business/运营引流.md
@@ -23,7 +23,12 @@ abbrlink: vns5shb6
     * 社交裂变
       * 拼单卡、砍价免费拿、多多果园等引流渠道
     * 广告
-      * CPT(Cost Per Time, 按时长付费)、CPM(Cost Per Mile, 每千人成本)、CPC(Cost Per Click, 按单次点击扣费)、明星店铺推广、数据银行推广、品类关键词库、短信营销等引流渠道
+      * CPT（Cost Per Time, 按时长付费）
+      * CPM（Cost Per Mile, 每千人成本）
+      * CPC（Cost Per Click, 按单次点击扣费）
+      * CPS（Cost Per Sales，按成交付费。以实际销售产品数量来计算广告费）
+      * CPA（Cost Per Action，按成交付费。按回应的有效问卷或订单来计费）
+      * 明星店铺推广、数据银行推广、品类关键词库、短信营销等引流渠道
     * App 展示
       * 首页开屏、首页 Banner、类目类 Banner、个人中心 Banner、新人专区、App 推送消息等引流渠道
     * 搜索
