--- a/Product/e-business/电商产品思考.md
+++ b/Product/e-business/电商产品思考.md
@@ -6,6 +6,7 @@ abbrlink: yn25617p
 - [C2C、B2C、C2B 模式的区别是什么？](#c2cb2cc2b-模式的区别是什么)
 - [SPU、SKU 是什么？它们分别解决了什么问题？](#spusku-是什么它们分别解决了什么问题)
 - [广告类型有哪几种？](#广告类型有哪几种)
+- [申诉产品的价值？](#申诉产品的价值)
 
 ### 商品类目和属性的关系是什么？
 
@@ -43,3 +44,13 @@ abbrlink: yn25617p
 * 对于网站主来说 CPT、CPM 模式会更为省心；
 * 对于广告主来说，CPS、CPA 模式会让其不花冤枉钱；
 * CPC 模式对网站主、广告主来说，相对中立；
+
+### 申诉产品的价值？
+
+申诉类型产品对于平台来说，并不能直接和 GMV 等指标挂钩，那做它的意义是什么呢？
+
+可以从以下角度思考：
+
+1. 串联申诉逻辑，减少逻辑分散。申诉产品逻辑比较复杂，往往会涉及到多个部门的联动，借助申诉产品线可以聚焦申诉逻辑，避免该业务分散以及各个部门重复的工作量。
+2. 除了 KPI，还需考虑人文关怀。
+
