--- a/Product/e-business/电商产品思考.md
+++ b/Product/e-business/电商产品思考.md
@@ -51,6 +51,7 @@ abbrlink: yn25617p
 
 可以从以下角度思考：
 
-1. 串联申诉逻辑，减少逻辑分散。申诉产品逻辑比较复杂，往往会涉及到多个部门的联动，借助申诉产品线可以聚焦申诉逻辑，避免该业务分散以及各个部门重复的工作量。
-2. 除了 KPI，还需考虑人文关怀。
-
+1. **串联申诉逻辑，减少逻辑分散**。申诉产品逻辑比较复杂，往往会涉及到多个部门的联动，借助申诉产品线可以聚焦申诉逻辑，避免该业务分散以及各个部门重复的工作量。
+2. 降低客服热线压力。
+3. 根据用户申诉的点，可以进一步完善产品。
+4. 避免一刀切，具有人文关怀价值。
